--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ img
     width: auto;
     height: auto;
 }
+h1
+{
+    text-align: center;
+    font-size: 32pt;
+    font-family: comic sans ms;
+    font-weight: bold;
+}
